--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@ var _hmt = _hmt || [];
 		</div>
 	</div>
 	
-	<p>宝贝我错了，对不起，不要生气啦~</p>
+	<h1 align = center>宝贝我错了，对不起，不要生气啦~</h1>
 </body>
 </html>
